Modify the connection string Config. add gitignore to remove tot necessarily files.

--- a/BookStore/BookStore.csproj
+++ b/BookStore/BookStore.csproj
@@ -124,6 +124,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="App_Data\" />
     <Folder Include="Resources\Images\" />
   </ItemGroup>
   <PropertyGroup>
