--- a/BookStore/Web.config
+++ b/BookStore/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   <connectionStrings>
     <add name="BookData"
-         connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\admin\Documents\GitHub\AngularJS-WebAPI-BookStore\bookstore.mdf;Integrated Security=True;Connect Timeout=30"
+         connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|bookstore.mdf;Integrated Security=True;Connect Timeout=30"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
